250624 작업... 일단 회피됨. 범위 넓어야함, 두개 회피하기 안됨, 목표 = 보행자 로직에서 5개(경유지 적용가능시) 혹은 회피기동을 재귀적함수로 구현하기, 대중교통api이용 대중교통 경로 선택시 해당 보행자경로를 커스텀 보행자 경로로 대체하기. 커스텀 보행자 경로와 대중교통사이 포인트는 교통약자 편의시설(엘리베이터, 에스컬레이터)로 찍기... 갈길이 너무 멀다. (경사도 할 수 있을까?)